--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <img class="cabeçalho-imagem" src="alurastart logo 1.png" alt="logo da alura start">
         <ul>
             <li>estudante</li>
             <li>escola</li>
