--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>paulo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabeçalho"> 
         <img class="cabeçalho-imagem" src="alurastart logo 1.png" alt="logo da alura start">
-        <ul>
-            <li>estudante</li>
-            <li>escola</li>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">estudante</li>
+            <li class="cabeçalho-lista-item">escola</li>
         </ul>
-    </header>
+    </header >
     
     
 </body>
